<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (c) 2025 Android project OpenVision API
  ~ All rights reserved.
  ~ Project: My Application
  ~ File: nav_graph.xml
  ~ Last Modified: 1/10/2025 4:38
  -->

<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/nav_login">

    <fragment
        android:id="@+id/nav_login"
        android:name="vn.edu.usth.myapplication.LoginFragment"
        android:label="@string/login"
        tools:layout="@layout/fragment_login">
        <action
            android:id="@+id/action_nav_login_to_nav_home"
            app:destination="@id/nav_home"
            app:popUpTo="@id/nav_login"
            app:popUpToInclusive="true" />
    </fragment>

    <fragment
        android:id="@+id/nav_register"
        android:name="vn.edu.usth.myapplication.RegisterFragment"
        android:label="Register"
        tools:layout="@layout/fragment_register" />

    <fragment
        android:id="@+id/nav_home"
        android:name="vn.edu.usth.myapplication.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_camera"
        android:name="vn.edu.usth.myapplication.EmbeddedCameraFragment"
        android:label="@string/title_camera"
        tools:layout="@layout/fragment_camera" />

    <fragment
        android:id="@+id/nav_history"
        android:name="vn.edu.usth.myapplication.HistoryFragment"
        android:label="@string/title_history"
        tools:layout="@layout/fragment_history" />

    <fragment
        android:id="@+id/nav_settings"
        android:name="vn.edu.usth.myapplication.SettingsFragment"
        android:label="@string/title_settings"
        tools:layout="@layout/fragment_settings" />

</navigation>
