<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (c) 2025 Android project OpenVision API
  ~ All rights reserved.
  ~ Project: My Application
  ~ File: fragment_welcome.xml
  ~ Last Modified: 5/10/2025 10:43
  -->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background"
    android:padding="24dp">

    <LinearLayout
        android:id="@+id/iconRow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="362dp"
            android:layout_height="324dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/logoapp" />
    </LinearLayout>

    <TextView
        android:id="@+id/welcomeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/iconRow"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:text="@string/tex1"
        android:textColor="@android:color/white"
        android:textSize="28sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/camStudyText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/welcomeText"
        android:layout_centerHorizontal="true"
        android:text="@string/tex2"
        android:textColor="#FFD700"
        android:textSize="28sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/descriptionText"
        android:layout_width="387dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/camStudyText"
        android:layout_alignParentEnd="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="0dp"
        android:gravity="center"
        android:text="@string/tex3"
        android:textColor="#FFA500"
        android:textSize="20sp" />

    <Button
        android:id="@+id/btnGoLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/descriptionText"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:backgroundTint="#FFA500"
        android:padding="12dp"
        android:text="Start"
        android:textColor="@color/white"
        android:textStyle="bold" />

</RelativeLayout>
